# s3-3tz-clipper

./: Cargo.toml  LICENSE  clipped-jacksonville.3tz  index.md  jacksonville_clip.geojson  readme.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: clip.rs  main.rs  s3_reader.rs
tests/: run_test.sh
