[package]
name = "s3-3tz-clipper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
clap = { version = "4.4", features = ["derive"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] } # Stable late-v1 config
aws-sdk-s3 = "1.135.0"                                                   # Latest S3 SDK (as of June 2026)
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }
geojson = "0.24"
geo = "0.27"
geo-types = "0.7"
serde_json = "1.0"
futures = "0.3"
indicatif = "0.17"
s2 = "0.0.10"
md-5 = "0.10"
crc32fast = "1.3"
flate2 = "1.0"
zip = "0.6"